add_subdirectory(BeginAndEndCommandBuffer_test)
add_subdirectory(BeginAndEndRenderPass_test)
add_subdirectory(BufferImageCopy_test)
add_subdirectory(QueueSubmitAndWait_test)
add_subdirectory(vkQueuePresentKHR_test)
add_subdirectory(SetViewportScissorAndBindPipeline_test)
add_subdirectory(vkCmdBindDescriptorSets_test)
add_subdirectory(vkCmdBindIndexBuffer_test)
add_subdirectory(vkCmdBindVertexBuffers_test)
add_subdirectory(vkCmdDraw_test)
