add_subdirectory(CreateDestroyImage_test)
add_subdirectory(CreateDestroyImageView_test)
add_subdirectory(vkCreateCommandPool)
add_subdirectory(AllocateResetFreeCommandBuffer)
add_subdirectory(SurfaceCreation_test)
add_subdirectory(SynchronizationCreationDestruction_test)
add_subdirectory(vkCreateSwapchainKHR_test)
